Smaller font, some markup and font scaling fixes.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html></body>
+<!DOCTYPE html>
 <html lang="en" xml:lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -22,15 +22,14 @@
 		<div id="content-column">
 			<div class="content-container" id="first-container">
 				<h1>Andrew's Portfolio</h1>
-				<h4>Hello World!!!</h4>
 				<br/>
-				<a href="https://www.linkedin.com/in/andrew-cumming/" class="icon-link" target="_blank">
+				<a href="https://www.linkedin.com/in/andrew-cumming/" class="icon-link" target="_blank" rel="noreferrer">
 					<img src="static/icons/linkedin-icon.svg" alt="Find me on LinkedIn" width="32"/>
 				</a>
-				<a href="https://github.com/AndrewEC" class="icon-link" target="_blank">
+				<a href="https://github.com/AndrewEC" class="icon-link" target="_blank" rel="noreferrer">
 					<img src="static/icons/github-icon.svg" alt="Find me on Github" width="32"/>
 				</a>
-				<a href="https://stackoverflow.com/story/andrewc" class="icon-link" target="_blank">
+				<a href="https://stackoverflow.com/story/andrewc" class="icon-link" target="_blank" rel="noreferrer">
 					<img src="static/icons/stack-icon.svg" alt="Find me on Stack Overflow" width="32"/>
 				</a>
 			</div>
@@ -70,7 +69,7 @@
 			<div class="content-container">
 				<h2>Education</h2>
 				<p>Centennial College - Toronto, Ontario</p>
-				<p>Software Engineering Technology , 2012 to December 2016 - Advanced Diploma </p>
+				<p>Software Engineering Technology, 2012 to December 2016 - Advanced Diploma </p>
 			</div>
 
 			<div class="content-container">
@@ -128,7 +127,7 @@
 					<li>Window imager/magnifier to take screenshots of particular application windows</li>
 					<li>Colour blind filters that can be used with the previously mentioned tools</li>
 				</ul>
-				<a href="https://github.com/AndrewEC/ContrastCalculator" target="_blank" class="bottom-link">View on Github</a>
+				<a href="https://github.com/AndrewEC/ContrastCalculator" target="_blank" rel="noreferrer" class="bottom-link" title="View Contrast Calculator on Github">View on Github</a>
 
 				<div class="divider"></div>
 
@@ -143,7 +142,7 @@
 					<li>Randomize the file's byte order before storing it</li>
 					<li>Clean function to clear out any saved data on one or more images that currently contain data</li>
 				</ul>
-				<a href="https://github.com/AndrewEC/SteganographyApp" target="_blank" class="bottom-link">View on Github</a>
+				<a href="https://github.com/AndrewEC/SteganographyApp" target="_blank" rel="noreferrer" class="bottom-link" title="View Steganography app on Github">View on Github</a>
 
 				<div class="divider"></div>
 
@@ -157,7 +156,7 @@
 						help and validation information.
 					</li>
 				</ul>
-				<a href="https://github.com/AndrewEC/PyArgumentParser" target="_blank" class="bottom-link">View on Github</a>
+				<a href="https://github.com/AndrewEC/PyArgumentParser" target="_blank" rel="noreferrer" class="bottom-link" title="View PyArgumentParser on Github">View on Github</a>
 			</div>
 
 			<div class="content-container">
@@ -169,7 +168,7 @@
 					distribute documents in a PDF format. This is usually the preferred
 					format because it is generally more accessible, has more features, and has
 					a free reader that can be downloaded to view it in its fullest.</p>
-				<a href="https://github.com/AndrewEC/AndrewEC.github.io/blob/master/static/files/Word_to_PDF_Tip_Sheet.pdf?raw=true" target="_blank" class="bottom-link">
+				<a href="https://github.com/AndrewEC/AndrewEC.github.io/blob/master/static/files/Word_to_PDF_Tip_Sheet.pdf?raw=true" target="_blank" rel="noreferrer" class="bottom-link">
 					Word to PDF Tip Sheet [78 KB]</a>
 
 				<div class="divider"></div>
@@ -180,7 +179,7 @@
 						those who require the use of assistive devices such as screen readers.</p>
 				<p>In this document I hope explain some of it's complexities so you can have a
 					better understanding of its rules and standards and why we have it.</p>
-				<a href="https://github.com/AndrewEC/AndrewEC.github.io/blob/master/static/files/What_is_WCAG.docx?raw=true" target="_blank" class="bottom-link">
+				<a href="https://github.com/AndrewEC/AndrewEC.github.io/blob/master/static/files/What_is_WCAG.docx?raw=true" target="_blank" rel="noreferrer" class="bottom-link">
 					What is WCAG? [30 KB]</a>
 
 				<div class="divider"></div>
@@ -192,7 +191,7 @@
 				<p>So this guide targets outlook specifically and tries to provide the users
 					with enough information to create their own accessible emails.</p>
 				<a href="https://github.com/AndrewEC/AndrewEC.github.io/blob/master/static/files/Guide_to_Creating_Accessible_Emails_in_Outlook.docx?raw=true"
-						target="_blank" class="bottom-link">
+						target="_blank" rel="noreferrer" class="bottom-link">
 					Guide to Creating Accessible Emails in Outlook [229 KB]</a>
 			</div>
 
