Marked scripts as async.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 			</div>
 		</div>
 
-		<script type="text/javascript" src="/static/scripts/base64.js"></script>
-		<script type="text/javascript" src="/static/scripts/portfolio.js"></script>
+		<script type="text/javascript" src="/static/scripts/base64.js" async></script>
+		<script type="text/javascript" src="/static/scripts/portfolio.js" async></script>
     </body>
 </html>
