--- a/index.html
+++ b/index.html
@@ -13,7 +13,106 @@
 		
 		<link rel="icon" href="/static/images/Source.png"/>
 		
-		<link href="/static/css/theme.css" rel="stylesheet" type="text/css"/>
+		<link rel="preload" href="/static/css/theme.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+		<style type="text/css">
+			/* ============================================================ */
+			/* Global Styles */
+			@font-face {
+				font-family: 'Voltaire';
+				src: url('/static/fonts/Voltaire-Regular.ttf');
+			}
+
+			* {
+				font-family: 'Voltaire';
+			}
+
+			html, body {
+				padding: 0;
+				margin: 0;
+				background-color: #161819;
+			}
+
+			a {
+				color: #c3e791;
+				width: 100%;
+				padding: 15px;
+				box-sizing: border-box;
+			}
+
+			a:focus{
+				outline: 1px dashed #86c232;
+			}
+
+			h1, h2, h3, h4, h5 {
+				margin-bottom: 0px;
+			}
+
+			h1 {
+				font-size: 40px;
+			}
+
+			h2 {
+				font-size: 34px;
+			}
+
+			h3 {
+				font-size: 28px;
+			}
+
+			li, a, span, p {
+				font-size: 24px;
+			}
+			/* ============================================================ */
+
+			/* ============================================================ */
+			/* Content */
+			#content-column {
+				width: 60%;
+				margin: 0 auto;
+				border-left: 5px solid #86c232;
+				border-right: 5px solid #86c232;
+				color: #AAAEB3;
+			}
+
+			.content-container {
+				background-color: #222629;
+				padding-left: 20px;
+				padding-right: 20px;
+				box-sizing: content-box;
+				overflow: auto;
+				margin-bottom: 40px;
+			}
+
+			#last-container {
+				padding-bottom: 50px;
+				margin-bottom: 0px !important;
+			}
+
+			#first-container{
+				padding-bottom: 30px;
+			}
+			/* ============================================================ */
+
+			/* ============================================================ */
+			/* Other */
+			.icon-link {
+				color: #222629;
+				text-decoration: none;
+			}
+
+			.divider{
+				width: 100%;
+				height: 2px;
+				display: block;
+				background-color: #566441;
+			}
+
+			.bottom-link{
+				margin-bottom: 20px;
+				display: block;
+			}
+			/* ============================================================ */
+		</style>
 	</head>
 	<body>
 		<div id="content-column">
