Fix previous change.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 		<link rel="icon" href="/static/images/Source.png"/>
 		
-		<style type="text/css" rel="stylesheet" href="/static/css/theme.css" />
+		<link type="text/css" rel="stylesheet" href="/static/css/theme.css" />
 	</head>
 	<body>
 		<div id="content-column">
