Removed argument parser project.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			<div class="content-container">
 				<h1>Personal Projects</h1>
 				<h2>Contrast Calculator</h2>
-				<p>A simple Java based tool to check colour combinations against WCAG 2.0 colour contrast criteria.</p>
+				<p>One of my first independant projects; a simple Java based tool to check colour combinations against WCAG 2.0 colour contrast criteria.</p>
 				<ul>
 					<li>Has simple eye dropper tool to select any colour on screen</li>
 					<li>Build in snipping tool to take easy screenshots</li>
@@ -141,23 +141,10 @@
 				</ul>
 				<a href="https://github.com/AndrewEC/SteganographyApp" target="_blank" rel="noreferrer" class="bottom-link" title="View Steganography app on Github">View on Github</a>
 
-				<div class="divider"></div>
-
-				<h2>PyArgumentParser</h2>
-				<p>An alternative command line argument parser to the standard Python parser.</p>
-				<ul>
-					<li>Provides out of the box validator classes providing single and cross argument validation logic.</li>
-					<li>Helps parse command line arguments when running scripts.</li>
-					<li>
-						Provides a help dump utility to dump usage example and specific argument
-						help and validation information.
-					</li>
-				</ul>
-				<a href="https://github.com/AndrewEC/PyArgumentParser" target="_blank" rel="noreferrer" class="bottom-link" title="View PyArgumentParser on Github">View on Github</a>
 			</div>
 
 			<div class="content-container">
-				<h1>Reports</h1>
+				<h1>Writings</h1>
 				<p>A collection of research and summary reports, mostly focusing on
 					digital accessibility tools, methods, and standards.</p>
 				<h2>Word to PDF Tipsheet</h2>
