Updated resume to be clear about dedicated qa alternative for professional experience.

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 				<ul>
 					<li>Developed multiple Java/Spring Boot microservices to support a next generation online
 						banking portal for small and mid size business clients</li>
-					<li>Apps were developed in a 2 week sprint cycle without any dedicated quality assurance</li>
+					<li>Apps were developed in a 2 week sprint cycle without any dedicated quality assurance team</li>
+					<li>All services were build with an automated test suite including unit tests, integration tests, and
+						mutation tests using PIT</li>
 					<li>Applications built deployed via Jenkins and Urban Code Deploy through an automated continuous
 						integration pipeline and hosted on the Pivotal Cloud Foundry platform</li>
 					<li>Debugged production level defects and issues using standard application logs and Dynatrace tracking</li>
 					<li>Designed and implemented structured database schemas using MariaDB for features like user
 						preferences and approval workflows with the help of Liquibase and Spring JPA</li>
-					<li>All services were build with an automated test suite including unit tests, integration tests, and
-						mutation tests using PIT</li>
 					<li>Worked with a sizeable team (> 50 people) using a SCRUM like methodology centered around the concept
 						of Journeys and Squads</li>
 					<li>Generated service interfaces using automated tools like SpringFox and OpenAPI generator</li>
