Slight changes to skills summary.

--- a/index.html
+++ b/index.html
@@ -65,15 +65,12 @@
 
 				<h3>Skills Summary</h3>
 				<ul>
-					<li>Accessibility Analysis and Remediation</li>
-					<li>Accessibility Training</li>
-					<li>UML Design</li>
-					<li>Black and White Box Testing Methodologies</li>
-					<li>Agile/Scrum</li>
-					<li>Angular 2+/SPA Development</li>
-					<li>Spring Boot/Reactive/MVC Development</li>
-					<li>Python/Flask</li>
-					<li>SQL/MariaDB</li>
+					<li>Spring Boot/MVC Development (5 Years)</li>
+					<li>SQL/MariaDB (3 Years)</li>
+					<li>Agile/Scrum (3 Years)</li>
+					<li>Angular 2+/SPA Development (3 Years)</li>
+					<li>Python/FastAPI (3 Years)</li>
+					<li>Black and White Box Testing Methodologies (5 Years)</li>
 				</ul>
 			</div>
 
