More minor changes to skills summary.

--- a/index.html
+++ b/index.html
@@ -66,11 +66,21 @@
 				<h3>Skills Summary</h3>
 				<ul>
 					<li>Spring Boot/MVC Development (5 Years)</li>
+					<li>Black and White Box Testing Methodologies (5 Years) including:</li>
+					<ul>
+						<li>Unit Testing</li>
+						<li>Integration Testing</li>
+						<li>Mutation Testing</li>
+						<li>Performance Testing</li>
+						<li>Exploratory Testing</li>
+						<li>Equivalence Partitioning</li>
+						<li>Boundary Value Analysis</li>
+						<li>Truth Tables</li>
+					</ul>
 					<li>SQL/MariaDB (3 Years)</li>
 					<li>Agile/Scrum (3 Years)</li>
 					<li>Angular 2+/SPA Development (3 Years)</li>
 					<li>Python/FastAPI (3 Years)</li>
-					<li>Black and White Box Testing Methodologies (5 Years)</li>
 				</ul>
 			</div>
 
