Updated work experience in resume and main page.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<div class="content-container">
 				<h2>Resume</h2>
-				<a href="https://github.com/AndrewEC/AndrewEC.github.io/blob/master/static/files/Resume.pdf?raw=true">Download my Resume (.pdf) [64 KB]</a>
+				<a href="https://github.com/AndrewEC/AndrewEC.github.io/blob/master/static/files/Resume.pdf?raw=true">Download my Resume (.pdf) [66 KB]</a>
 				<h3>Contents</h3>
 				<ul id="table-of-contents">
 					<li>
@@ -106,36 +106,43 @@
 			<div class="content-container">
 				<h1 id="professional-work">Professional Work</h1>
 
-				<h2 id="business-banking-portal-development">Business Banking Portal Development</h2>
+				<h2 id="business-banking-portal-development">Business Banking Portal Development (API Developer/RBC)</h2>
+				<p>
+					As part of this role my primary responsibilities were to continuously develop and maintain presentation/domain APIs,
+					integrated and automated test suites, and, occasionally, assist in the development of frontend modern Angular based
+					components to support a modern business banking portal supporting thousands of clients and millions of dollars in transactions
+					annually.
+				</p>
 				<ul>
-					<li>Developed multiple Java/Spring Boot microservices to support a next generation online
-						banking portal for small and mid size business clients processing thousands of transactions
-						worth tens of millions annually</li>
-					<li>Developed apps following an agile, scrum like, methodology in 2 week cycles</li>
-					<li>Ensured product quality through the implementation of granular automated tests including unit
-						tests, integration tests with wiremock, contract tests with PACT, and mutation tests using PIT</li>
-					<li>Ensured application resiliency and banking portal scalability by taking advandage of latest Spring
-						conventions including reactive and asyncoronous paradigms</li>
-					<li>Applications built deployed via Jenkins and Urban Code Deploy through an automated continuous
-						integration pipeline and hosted on the Pivotal Cloud Foundry platform</li>
+					<li>Developed multiple Java/Spring Boot/Maven stateless microservices using a scrum like methodology in 2 week sprint cycles</li>
+					<li>Ensured product quality through the implementation of granular automated tests including unit tests, integration tests
+						with WireMock, contract tests with PACT, and mutation tests using PIT</li>
+					<li>Ensured application resiliency and banking portal scalability by taking advantage of latest Spring conventions including
+						reactive and asynchronous paradigms and PCF auto-scaling configurations</li>
+					<li>Applications built deployed via Jenkins and Urban Code Deploy through an automated continuous integration pipeline and
+						hosted on the Pivotal Cloud Foundry platform</li>
 					<li>Debugged production level defects and issues using standard application logs and Dynatrace tracking</li>
-					<li>Designed and implemented structured database schemas using MariaDB for features like user
-						preferences and approval workflows with the help of Liquibase and Spring JPA</li>
+					<li>Designed and implemented structured database schemas using MariaDB for features like user preferences and approval workflows
+						with the help of Liquibase and Spring JPA</li>
+					<li>Expanded communication and presentation skills through the assistance of a dedicated Ezra coaching sessions</li>
 				</ul>
 
 				<div class="divider"></div>
 
 				<h2 id="personal-online-banking-service-development">Personal Online Banking Service Development</h2>
+				<p>
+					As part of RBC's Digital Development team we are responsible for creating, managing, and otherwise maintaining many front end
+					and service layer components running on Websphere Portal, Spring MVC, and Angular 2+ platforms that support thousands of clients
+					and tens of millions of dollars in transactions annually.
+				</p>
 				<ul>
-					<li>Developed multiple backend services using Spring Boot and Spring MVC to support various online
-						banking features like self-serve loan management, GIC purchase and renewal, and online foreign
-						currency ordering</li>
-					<li>Created multi-channel applications that support both external customers and internal employees
-						utilizing LDAP/SPNEGO for automatic integrated employee authentication</li>
-					<li>Applications support thousands of online banking clients and help handle tens of millions
-						of dollars in transactions annually</li>
-					<li>Applications built and deployed via Jenkins and Urban Code Deploy through an automated
-						continuous integration pipeline and hosted on the Bluemix platform</li>
+					<li>Developed multiple backend services using Spring Boot and Spring MVC with Maven to support various online banking
+						features like self-serve loan management, GIC purchase and renewal, and online foreign currency ordering</li>
+					<li>Created multi-channel applications that support customer and employee assisted channels utilizing LDAP/SPNEGO for
+						automatic employee authentication</li>
+					<li>Developed upon, and maintained, legacy Websphere applications running on a remote Windows VM</li>
+					<li>Applications primarily built and deployed via Jenkins and Urban Code Deploy through an automated continuous
+						integration pipeline and hosted on the Bluemix platform</li>
 					<li>Developed, largely, in a Waterfall style methodology with dedicated quality assurance team members</li>
 				</ul>
 
